--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,25 @@ body {
   color: transparent;
 }
 
+.sidebar-link {
+  padding: 1rem 2.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.75rem;
+  font-size: 1.125rem;
+  letter-spacing: 0.025em;
+  color: #e5e7eb;
+  transition: all 300ms;
+}
+
+.sidebar-link:hover {
+  color: #48a296;
+  background-color: #e5e7eb;
+}
+
+.sidebar-link.active {
+  color: #48a296;
+  font-weight: 500;
+  background-color: #e5e7eb;
+}
